First part done

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,8 @@
 @import "components/bookings_made_by_Yourself_card";
 @import "components/listings_new_form";
 @import "components/review_create_form";
+@import "components/listings_showpage";
+
 
 // Geocoding
 @import url("https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css");
