--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@
 @import "components/listings_new_form";
 @import "components/review_create_form";
 @import "components/listings_showpage";
+@import "components/listings_showpage_pictures";
 
 
 // Geocoding
