--- a/app/views/listings/_gallery.html.erb
+++ b/app/views/listings/_gallery.html.erb
@@ -24,7 +24,7 @@
                   type="button"
                   data-action="click->gallery#open"
                   data-index="4">
-            Alle Fotos anzeigen
+            Show all Fotos
           </button>
         <% end %>
       </div>
@@ -36,7 +36,7 @@
   <div class="modal-dialog modal-xl modal-dialog-centered">
     <div class="modal-content border-0">
       <div class="modal-header">
-        <h5 class="modal-title"><%= @listing.title %> – Fotos</h5>
+        <h5 class="modal-title"><%= @listing.title %> – Photos</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Schließen"></button>
       </div>
       <div class="modal-body p-0">
@@ -54,11 +54,11 @@
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#listingCarousel" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Zurück</span>
+            <span class="visually-hidden">Back</span>
           </button>
           <button class="carousel-control-next" type="button" data-bs-target="#listingCarousel" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Weiter</span>
+            <span class="visually-hidden">Continue</span>
           </button>
         </div>
       </div>
