--- a/app/views/listings/_show_content.html.erb
+++ b/app/views/listings/_show_content.html.erb
@@ -58,7 +58,7 @@
               <div class="content" data-description-target="content" aria-expanded="false">
                 <%= simple_format(listing.description) %>
               </div>
-              <button class="btn btn-link p-0 mt-2 desc-toggle"
+              <button class="desc-toggle"
                       type="button"
                       data-action="click->description#toggle"
                       data-description-target="button"
