--- a/app/views/listings/reviews/_listings_reviews_show.html.erb
+++ b/app/views/listings/reviews/_listings_reviews_show.html.erb
@@ -67,6 +67,6 @@
       <%= paginate reviews %>
     </div>
   <% else %>
-    <p class="text-muted mt-3">No Reviews.</p>
+    <p class="text-muted mt-3 text-center">No Reviews.</p>
   <% end %>
 </section>
